same-namespace/03-colour-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: red
  name: red-svc-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: red

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: green
  name: green-svc-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: green

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: blue
  name: blue-svc-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: blue
