same-namespace/04-colour-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: red
  name: red-svc-ci
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: red

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: green
  name: green-svc-ci
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: green

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: blue
  name: blue-svc-ci
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: blue
